# Pixeldrain-Rust

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  Makefile  README.md  api_docs.html  build.rs  debug_test.sh  test_file.txt
.github/workflows/: ci.yml
scripts/: build.ps1  build.sh
src/: main.rs  pixeldrain_api.rs
